# indicator-syncthing

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mypy.yml  octocheese.yml  python_ci_linux.yml
doc-source/: conf.py  index.rst
indicator_syncthing/: __init__.py  __main__.py
