[build-system]
requires = [ "setuptools!=61.*,>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "indicator-syncthing"
version = "0.1.0"
description = "A Syncthing status menu for Unity and other desktops that support AppIndicator."
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
dynamic = [ "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/indicator-syncthing"
"Issue Tracker" = "https://github.com/domdfcoding/indicator-syncthing/issues"
"Source Code" = "https://github.com/domdfcoding/indicator-syncthing"

[project.scripts]
indicator_syncthing = "indicator_syncthing.__main__:main"
indicator-syncthing = "indicator_syncthing.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]
python-versions = [ "3.6", "3.7", "3.8",]
python-implementations = [ "CPython",]
platforms = [ "Linux",]
license-key = "Apache-2.0"
package = "indicator_syncthing"
additional-files = [ "recursive-include indicator_syncthing/icons *",]

[tool.importcheck]

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
